android: Allow using SDK and NDK directly from the Android Studio.
Just specify:

--with-android-ndk=$HOME/Android/Sdk/ndk-bundle
--with-android-sdk=$HOME/Android/Sdk

in your autogen.input, install the appropriate components via Android
Studio and you are done.

Change-Id: Ic99790b781b9017eb4e642380e230d6f7b49e9b7
Reviewed-on: https://gerrit.libreoffice.org/81228
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Jan Holesovsky <kendy@collabora.com>
(cherry picked from commit 246f1b5b4485b7db9f9584e4b3b819c87e331c0e)
Reviewed-on: https://gerrit.libreoffice.org/81328
Tested-by: Jenkins

--- a/android/source/build.gradle
+++ b/android/source/build.gradle
@@ -33,8 +33,7 @@ dependencies {
             "unoloader.jar"
     ])
     implementation files("${liboInstdir}/${liboShareJavaFolder}/unoil.jar")
-    debugImplementation(name:'owncloud_android_lib-debug', ext:'aar')
-    releaseImplementation(name:'owncloud_android_lib-release', ext:'aar')
+    implementation(name:'owncloud_android_lib', ext:'aar')
     implementation 'com.android.support:design:27.1.1' // also pulls-in corresponding support libraries
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 }
