configure.ac: Fix '--enable-kde5' compatibility switch
The 'kde5' VCL plugin was renamed to 'kf5' in commit
d3c6ac6d0f23df56644008ccb6aa2c8fa37ab1b5 ("tdf#125922
rename kde5 to kf5 + plasma5).

Fix the (temporary) compatibility switch, so that
'--enable-kde5' actually enables the build of the 'kf5'
VCL plugin and doesn't just set 'test_kf5' to 'yes' once
again...

Change-Id: I7871b5fc1dc36758a3e3d558da44ae24fd47de41
Reviewed-on: https://gerrit.libreoffice.org/78393
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>

--- a/configure.ac
+++ b/configure.ac
@@ -4910,7 +4910,7 @@ fi
 if test "$test_kf5" = "yes" -a "$enable_kde5" = "yes"; then
     AC_MSG_WARN([The kde5 VCL plugin was renamed to kf5. Please update your configuration to use --enable-kf5, as --enable-kde5 will be removed after the next major release!])
     add_warning "The kde5 VCL plugin was renamed to kf5. Please update your configuration to use --enable-kf5, as --enable-kde5 will be removed after the next major release!"
-    test_kf5=yes
+    enable_kf5=yes
 fi
 
 if test "$test_kf5" = "yes"; then
