--- a/configure.ac
+++ b/configure.ac
@@ -1972,6 +1972,17 @@ AC_ARG_WITH(help,
     ],
 ,)
 
+AC_ARG_WITH(omindex,
+   AS_HELP_STRING([--with-omindex],
+	[Enable the support of xapian-omega index for online help.])
+   [
+                         Usage: --with-omindex=server prepare the pages for omindex
+				but let xapian-omega be built in server.
+				--with-omindex=noxap do not prepare online pages
+                                for xapian-omega
+  ],
+,)
+
 libo_FUZZ_ARG_WITH(java,
     AS_HELP_STRING([--with-java=<java command>],
         [Specify the name of the Java interpreter command. Typically "java"
@@ -4967,6 +4978,36 @@ else
 fi
 AC_SUBST([ENABLE_HTMLHELP])
 AC_SUBST([HELP_ONLINE])
+
+AC_MSG_CHECKING([whether to enable xapian-omega support for help])
+if test -n "$with_omindex" -a "$with_omindex" != "no" -a $_os != iOS -a $_os != Android; then
+    BUILD_TYPE="$BUILD_TYPE HELP"
+    GIT_NEEDED_SUBMODULES="helpcontent2 $GIT_NEEDED_SUBMODULES"
+    case "$with_omindex" in
+    "server")
+        ENABLE_HTMLHELP=TRUE
+        HELP_ONLINE=TRUE
+        HELP_OMINDEX_PAGE=TRUE
+        AC_MSG_RESULT([SERVER])
+        ;;
+    "noxap")
+        ENABLE_HTMLHELP=TRUE
+        HELP_ONLINE=TRUE
+        HELP_OMINDEX_PAGE=FALSE
+        AC_MSG_RESULT([NOXAP])
+        ;;
+    *)
+        AC_MSG_ERROR([Unknown --with-omindex=$with_omindex])
+        ;;
+    esac
+else
+    HELP_OMINDEX_PAGE=FALSE
+    AC_MSG_RESULT([no])
+fi
+AC_SUBST([ENABLE_HTMLHELP])
+AC_SUBST([HELP_OMINDEX_PAGE])
+AC_SUBST([HELP_ONLINE])
+
 
 dnl Test whether to include MySpell dictionaries
 dnl ===================================================================
