tdf#42949 Fix IWYU warnings in xmloff/source/[c-m]*/*cxx
Also checked xmloff/qa

Found with bin/find-unneeded-includes
Only removal proposals are dealt with here.

Change-Id: I843917d255f841066ace8d944aa1d00f1b718108
Reviewed-on: https://gerrit.libreoffice.org/79773
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>

--- a/xmloff/IwyuFilter_xmloff.yaml
+++ b/xmloff/IwyuFilter_xmloff.yaml
@@ -30,3 +30,12 @@ blacklist:
     xmloff/source/xforms/XFormsModelExport.hxx:
     # Needed for css shortcut
     - sal/types.h
+    xmloff/source/core/fasttokenhandler.cxx:
+    # Needed for special array initialization
+    - tokennames.inc
+    xmloff/source/draw/sdpropls.cxx:
+    # Needed for extern type definitions at linking time
+    - enummaps.hxx
+    xmloff/source/meta/MetaExportComponent.cxx:
+    # Needed for direct member access
+    - com/sun/star/frame/XModel.hpp
