With Cygwin, AC_PATH_PROG needs Cygwin-style paths
(And instead directly specifying CLANGDIR as a Cygwin-style path in my clang-cl
build's autogen.input doesn't work, as compilerplugins/Makefile-clang.mk spells
a dependency on

  $(CLANGDIR)/bin/clang$(CLANG_EXE_EXT)

which Make on Windows requires to be a Windows-style path.)

Change-Id: I20ee3a2dfff0a3db66e1388cd6fc01084a6fd812
Reviewed-on: https://gerrit.libreoffice.org/80471
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -7011,7 +7011,11 @@ if test "$COM_IS_CLANG" = "TRUE"; then
         if test -z "$COMPILER_PLUGINS_CXX"; then
             COMPILER_PLUGINS_CXX=$CXX
         fi
-        AC_PATH_PROG(LLVM_CONFIG, llvm-config,[],$CLANGDIR/bin $PATH)
+        clangbindir=$CLANGDIR/bin
+        if test "$build_os" = "cygwin"; then
+            clangbindir=$(cygpath -u "$clangbindir")
+        fi
+        AC_PATH_PROG(LLVM_CONFIG, llvm-config,[],"$clangbindir" $PATH)
         if test -n "$LLVM_CONFIG"; then
             COMPILER_PLUGINS_CXXFLAGS=$($LLVM_CONFIG --cxxflags)
             COMPILER_PLUGINS_LINKFLAGS=$($LLVM_CONFIG --ldflags --libs --system-libs | tr '\n' ' ')
