My Windows clang-cl build still doesn't use LO_CLANG_SHARED_PLUGINS
...so disable the new configure.ac checks introduced with
ad5cbcf6ba0afdc1d8d7405c2641cce8de4a360b "try to autodetect flags needed to
build Clang plugins" that are only relevant when using LO_CLANG_SHARED_PLUGINS
and would fail miserably for my clang-cl build

Change-Id: I58f7f1f4608f1a615175f0c0d0d98c03c442a36c
Reviewed-on: https://gerrit.libreoffice.org/80477
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -7041,7 +7041,9 @@ if test "$COM_IS_CLANG" = "TRUE"; then
                 add_warning "Cannot find Clang headers to build compiler plugins, plugins disabled."
             fi
             ])
-        if test -n "$COMPILER_PLUGINS"; then
+        dnl TODO: Windows doesn't use LO_CLANG_SHARED_PLUGINS for now, see corresponding TODO
+        dnl comment in compilerplugins/Makefile-clang.mk:
+        if test -n "$COMPILER_PLUGINS" && test "$_os" != "WINNT"; then
             LDFLAGS=""
             AC_MSG_CHECKING([for clang libraries to use])
             if test -z "$CLANGTOOLLIBS"; then
