configure: remove sanitizer flags from default COMPILER_PLUGINS_CXX
When COMPILER_PLUGINS_CXX is default initialised from $CXX, filter out
sanitizer flags, because:
a) linking fails with unresolved symbols currently
b) typically the slowdown is unhelpful in a build
c) if anybody wants a sanitized plugin they can set COMPILER_PLUGINS_CXX
   manually

(init from CXX was added in ad5cbcf6ba0afdc1d8d7405c2641cce8de4a360b)

Change-Id: I64dc48fae5f7a23f87b0eee0545add9a1ebd5672
Reviewed-on: https://gerrit.libreoffice.org/80655
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@cib.de>

--- a/configure.ac
+++ b/configure.ac
@@ -7009,7 +7009,7 @@ if test "$COM_IS_CLANG" = "TRUE"; then
         fi
         # Assume Clang is self-built, but allow overriding COMPILER_PLUGINS_CXX to the compiler Clang was built with.
         if test -z "$COMPILER_PLUGINS_CXX"; then
-            COMPILER_PLUGINS_CXX=$CXX
+            COMPILER_PLUGINS_CXX=[$(echo $CXX | sed -e 's/-fsanitize=[^ ]*//g')]
         fi
         clangbindir=$CLANGDIR/bin
         if test "$build_os" = "cygwin"; then
