--- a/compilerplugins/.gitignore
+++ b/compilerplugins/.gitignore
@@ -7,6 +7,7 @@
 /clang/sharedvisitor/analyzer.exe
 /clang/sharedvisitor/analyzer.o
 /clang/sharedvisitor/clang.pch
+/clang/sharedvisitor/clang.pch.d
 /clang/sharedvisitor/generator
 /clang/sharedvisitor/generator.d
 /clang/sharedvisitor/generator.exe
