use PCH for clang plugin source too, if enabled
This currently supports only building with Clang on Linux, as
I'm lazy to handle the other cases (and Clang should be usually
self-built anyway). The main compile time cost is in optimizing
the code, but this still saves few seconds per source.

Change-Id: Ib6c0fd874820af737ee1257cb5234fb78bc63ad8
Reviewed-on: https://gerrit.libreoffice.org/80810
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>

--- a/compilerplugins/.gitignore
+++ b/compilerplugins/.gitignore
@@ -1,6 +1,8 @@
 /clang/clang-timestamp
 /clang/plugin.dll
 /clang/plugin.so
+/clang/clang.pch
+/clang/clang.pch.d
 /clang/sharedvisitor/*.plugininfo
 /clang/sharedvisitor/analyzer
 /clang/sharedvisitor/analyzer.d
